clean code, improvements