@@ -2,6 +2,8 @@ package com.javaschool.eCommerce;
 
 import com.github.javafaker.Faker;
 import com.javaschool.eCommerce.model.*;
+import com.javaschool.eCommerce.service.CustomerService;
+import com.javaschool.eCommerce.service.CustomerServiceImpl;
 import com.javaschool.eCommerce.service.ProductService;
 import com.javaschool.eCommerce.service.ProductServiceImpl;
 import lombok.AllArgsConstructor;
@@ -14,7 +16,7 @@ import java.util.*;
 public class ECommerceApplication {
 	public static List<Customer> customerList = new ArrayList<>(); //Collections.emptyList();
 	public static List<Product> products = new ArrayList<>();
-	public static List<Visit> visits = new ArrayList<>(); //Todo: new ArrayList<>() vs Collections.emptyList()
+	public static List<Visit> visits = new ArrayList<>();
 
 	public static List<Category> categories = List.of(new Category("vegetable"), new Category("meat"), new Category("dairy"),
 			new Category("beverage"), new Category("frozen"));
@@ -28,22 +30,30 @@ public class ECommerceApplication {
 	}
 
 	public static void main(String[] args) {
-		inicializeData();
+		InitializeData();
 
 		SpringApplication.run(ECommerceApplication.class, args);
 	}
 
-	private static void inicializeData() {
+	private static void InitializeData() {
 		Faker faker = new Faker(new Locale("en-US"));
+		CustomerService customerService = new CustomerServiceImpl();
 
 		for (int i = 0; i < 15; i++) {
-			Customer customer = new Customer(i + 1, faker.name().fullName(), faker.phoneNumber().phoneNumber(), faker.internet().emailAddress(),
-					Collections.singletonList(new Address()), new ShoppingCart());
-
-			customerList.add(customer); //Todo: llamar al método createCustomer e implementar Builder()
+			
+			customerService.createCustomer(
+					Customer.builder()
+					.id(i + 1)
+					.name(faker.name().fullName())
+					.phoneNumber(faker.phoneNumber().phoneNumber())
+					.email(faker.internet().emailAddress())
+					.address(List.of(new Address()))
+					.shoppingCart(new ShoppingCart())
+					.build());
 		}
 
 		ProductService productService = new ProductServiceImpl();
+		
 		for (int i = 0; i < 10; i++) {
 
 			productService.createProduct(
